# oddscli

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  settings.yaml
app/: config.py
app/api/: client.py  endpoints.py  models.py
app/services/: budget.py  data_service.py  ev.py  ev_store.py
app/ui/: app.py  styles.tcss
app/ui/widgets/: arb_panel.py  constants.py  ev_panel.py  games_table.py  middles_panel.py  props_table.py  sport_tabs.py  status_bar.py
tests/: test_budget.py  test_ev.py
