[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oddscli"
version = "0.1.0"
description = "Live sports odds & scores terminal ticker"
requires-python = ">=3.11"
dependencies = [
    "textual>=0.47.0",
    "httpx>=0.27.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "rich>=13.0",
]

[project.scripts]
oddscli = "app.main:main"

[tool.setuptools.packages.find]
include = ["app*"]
